--- a/configure.in
+++ b/configure.in
@@ -2,6 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(libvirt, 0.3.3)
 AC_CONFIG_SRCDIR(src/libvirt.c)
+AC_CONFIG_AUX_DIR(build-aux)
 AM_CONFIG_HEADER(config.h)
 dnl Make automake keep quiet about wildcards & other GNUmake-isms
 AM_INIT_AUTOMAKE([-Wno-portability])
@@ -29,10 +30,14 @@ POLKIT_REQUIRED="0.6"
 
 dnl Checks for C compiler.
 AC_PROG_CC
-AM_PROG_CC_STDC
-AC_C_CONST
 AC_PROG_INSTALL
 AC_PROG_CPP
+
+gl_EARLY
+gl_INIT
+
+AM_PROG_CC_STDC
+AC_C_CONST
 
 dnl Make sure we have an ANSI compiler
 AM_C_PROTOTYPES
@@ -626,11 +631,12 @@ cp COPYING.LIB COPYING
 AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
           docs/examples/Makefile docs/devhelp/Makefile \
 	  docs/examples/python/Makefile \
+	  gnulib/lib/Makefile tests/gnulib/Makefile \
           libvirt.pc libvirt.spec \
           po/Makefile.in scripts/Makefile \
 	  include/libvirt/Makefile include/libvirt/libvirt.h \
 	  python/Makefile python/tests/Makefile \
-          qemud/Makefile m4/Makefile \
+          qemud/Makefile \
           tests/Makefile proxy/Makefile \
           tests/xml2sexprdata/Makefile \
           tests/sexpr2xmldata/Makefile \
