Test libvirtd's config-processing code.
And remove a minor diagnostic inconsistency.
* tests/daemon-conf: New test.
* tests/Makefile.am (TESTS_ENVIRONMENT): Prepend qemud/ to PATH,
so we can invoke libvirtd without an absolute name.
(test_scripts): Add daemon-conf.
* qemud/qemud.c (remoteConfigGetAuth): Use checkType,
rather than open-coding it with a different diagnostic.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -47,7 +47,9 @@ noinst_PROGRAMS = xmlrpctest xml2sexprtest sexpr2xmltest virshtest conftest \
         nodeinfotest
 
 test_scripts = \
+	daemon-conf \
 	int-overflow
+
 EXTRA_DIST += $(test_scripts)
 
 TESTS = xml2sexprtest sexpr2xmltest virshtest test_conf.sh xmconfigtest \
@@ -63,6 +65,7 @@ endif
 TESTS_ENVIRONMENT =				\
   abs_top_builddir=`pwd`/'$(top_builddir)'	\
   abs_top_srcdir=`pwd`/'$(top_srcdir)'		\
+  PATH='$(abs_top_builddir)/qemud$(PATH_SEPARATOR)'"$$PATH" \
   $(VG)
 
 valgrind:
