Add separate qparams module for handling query parameters. 	* src/qparams.c, src/qparams.h, src/Makefile.am: Added a 	  separate 'qparams' module for handling query parameters. 	* src/remote_internal.c: Factor out query parameter code so 	  it uses the 'qparams' module.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,6 +34,7 @@ CLIENT_SOURCES =						\
 		hash.c hash.h					\
 		test.c test.h                                   \
                 buf.c buf.h					\
+		qparams.c qparams.h				\
 		xml.c xml.h					\
 		event.c event.h					\
 		xen_unified.c xen_unified.h			\
